add distribution test for demo jstl
Signed-off-by: Olivier Lamy <oliver.lamy@gmail.com>